--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
        
         <div class="button-container outline">
             
+            <button class="btn shadow-tl">Hover</button>
+            <button class="btn shadow-tr">Hover</button>
+            <button class="btn shadow-bl">Hover</button>
+            <button class="btn shadow-br">Hover</button>
             <button class="btn shadow">Hover</button>
-            <button class="btn">Hover</button>
-            <button class="btn">Hover</button>
-            <button class="btn">Hover</button>
-            <button class="btn">Hover</button>
         </div>
     </body>
 </html>
