--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Button CSS Components</title>
+        <title>Button Hover Pop out</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1, viewport-fit=cover">
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -9,12 +9,13 @@
     <body>
        
         <div class="button-container outline">
-            <h1>Simple button Pop out</h1>
+            <h1>Button Hover Pop up</h1>
             <button class="btn shadow-tl">Hover</button>
             <button class="btn shadow-tr">Hover</button>
             <button class="btn shadow-bl">Hover</button>
             <button class="btn shadow-br">Hover</button>
             <button class="btn shadow">Hover</button>
+            <button class="btn shadow-b">Hover</button>
         </div>
     </body>
 </html>
